--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mui/icons-material": "^5.16.5",
     "@mui/material": "^5.16.5",
     "hamburger-react": "^2.5.1",
+    "ldrs": "^1.0.2",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
