--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "concurrently \"next dev\" \"node api/server.js\"",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -14,7 +14,11 @@
     "@mui/icons-material": "^5.16.5",
     "@mui/material": "^5.16.5",
     "axios": "^1.7.2",
+    "cheerio": "^1.0.0-rc.12",
     "clsx": "^2.1.1",
+    "cors": "^2.8.5",
+    "csv-writer": "^1.6.0",
+    "express": "^4.19.2",
     "framer-motion": "^11.3.18",
     "hamburger-react": "^2.5.1",
     "ldrs": "^1.0.2",
@@ -27,14 +31,17 @@
     "tailwind-merge": "^2.4.0"
   },
   "devDependencies": {
-    "@types/node": "^20",
+    "@types/cheerio": "^0.22.35",
+    "@types/node": "^20.14.12",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.4.19",
+    "concurrently": "^8.2.2",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
     "postcss": "^8.4.39",
     "tailwindcss": "^3.4.6",
-    "typescript": "^5"
+    "ts-node": "^10.9.2",
+    "typescript": "^5.5.4"
   }
 }
