added basic sign up functionality using firebase

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "concurrently \"next dev\" \"node api/server.js\"",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -13,16 +13,20 @@
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^5.16.5",
     "@mui/material": "^5.16.5",
+    "@react-oauth/google": "^0.12.1",
     "axios": "^1.7.2",
     "cheerio": "^1.0.0-rc.12",
     "clsx": "^2.1.1",
     "cors": "^2.8.5",
     "csv-writer": "^1.6.0",
     "express": "^4.19.2",
+    "firebase": "^10.12.4",
+    "firebase-tools": "^13.14.2",
     "framer-motion": "^11.3.18",
     "hamburger-react": "^2.5.1",
     "ldrs": "^1.0.2",
-    "next": "14.2.5",
+    "next": "^14.2.5",
+    "punycode": "^2.3.1",
     "react": "^18",
     "react-dom": "^18",
     "react-fast-marquee": "^1.6.5",
