--- a/package.json
+++ b/package.json
@@ -14,17 +14,24 @@
     "@mui/icons-material": "^5.16.5",
     "@mui/material": "^5.16.5",
     "@react-oauth/google": "^0.12.1",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/express": "^4.17.21",
+    "argon2": "^0.40.3",
     "axios": "^1.7.2",
+    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "cheerio": "^1.0.0-rc.12",
     "clsx": "^2.1.1",
     "cors": "^2.8.5",
     "csv-writer": "^1.6.0",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "firebase": "^10.12.4",
     "firebase-tools": "^13.14.2",
     "framer-motion": "^11.3.18",
     "hamburger-react": "^2.5.1",
     "ldrs": "^1.0.2",
+    "mysql2": "^3.11.0",
     "next": "^14.2.5",
     "punycode": "^2.3.1",
     "react": "^18",
