--- a/package.json
+++ b/package.json
@@ -28,11 +28,12 @@
     "express": "^4.19.2",
     "firebase": "^10.12.4",
     "firebase-tools": "^13.14.2",
-    "framer-motion": "^11.3.18",
+    "framer-motion": "^11.3.21",
     "hamburger-react": "^2.5.1",
     "ldrs": "^1.0.2",
     "mysql2": "^3.11.0",
     "next": "^14.2.5",
+    "next-cloudinary": "^6.9.0",
     "punycode": "^2.3.1",
     "react": "^18",
     "react-dom": "^18",
