--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "mysql2": "^3.11.0",
     "next": "^14.2.5",
     "next-cloudinary": "^6.9.0",
+    "postcss-flexbugs-fixes": "^5.0.2",
+    "postcss-preset-env": "^10.0.0",
     "punycode": "^2.3.1",
     "react": "^18",
     "react-dom": "^18",
@@ -43,15 +45,17 @@
     "tailwind-merge": "^2.4.0"
   },
   "devDependencies": {
+    "@fullhuman/postcss-purgecss": "^6.0.0",
     "@types/cheerio": "^0.22.35",
     "@types/node": "^20.14.12",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.4.19",
     "concurrently": "^8.2.2",
+    "cssnano": "^7.0.5",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
-    "postcss": "^8.4.39",
+    "postcss": "^8.4.41",
     "tailwindcss": "^3.4.6",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.4"
