--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "react-fast-marquee": "^1.6.5",
     "react-icons": "^5.2.1",
     "react-select": "^5.8.0",
-    "tailwind-merge": "^2.4.0"
+    "tailwind-merge": "^2.4.0",
+    "tailwind-scrollbar-hide": "^1.1.7"
   },
   "devDependencies": {
     "@fullhuman/postcss-purgecss": "^6.0.0",
