--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-dom": "^18",
     "react-fast-marquee": "^1.6.5",
     "react-icons": "^5.2.1",
+    "react-responsive": "^10.0.0",
     "react-select": "^5.8.0",
     "tailwind-merge": "^2.4.0",
     "tailwind-scrollbar-hide": "^1.1.7"
