--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "next-cloudinary": "^6.9.0",
     "postcss-flexbugs-fixes": "^5.0.2",
     "postcss-preset-env": "^10.0.0",
+    "prettier": "^3.3.3",
     "punycode": "^2.3.1",
     "react": "^18",
     "react-dom": "^18",
