--- a/package.json
+++ b/package.json
@@ -44,6 +44,8 @@
     "react-icons": "^5.2.1",
     "react-responsive": "^10.0.0",
     "react-select": "^5.8.0",
+    "react-virtualized-auto-sizer": "^1.0.24",
+    "react-window": "^1.8.10",
     "tailwind-merge": "^2.4.0",
     "tailwind-scrollbar-hide": "^1.1.7"
   },
