--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "firebase": "^10.12.4",
-    "firebase-tools": "^13.14.2",
+    "firebase-tools": "^13.17.0",
     "framer-motion": "^11.3.21",
     "hamburger-react": "^2.5.1",
     "ldrs": "^1.0.2",
@@ -52,10 +52,12 @@
   },
   "devDependencies": {
     "@fullhuman/postcss-purgecss": "^6.0.0",
+    "@types/aos": "^3.0.7",
     "@types/cheerio": "^0.22.35",
     "@types/node": "^20.14.12",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "aos": "^2.3.4",
     "autoprefixer": "^10.4.19",
     "concurrently": "^8.2.2",
     "cssnano": "^7.0.5",
