--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mui/icons-material": "^5.16.5",
     "@mui/material": "^5.16.5",
     "@react-oauth/google": "^0.12.1",
+    "lenis": "^1.1.13",
     "@types/bcryptjs": "^2.4.6",
     "@types/express": "^4.17.21",
     "argon2": "^0.40.3",
