--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
   "dependencies": {
     "@emotion/react": "^11.13.0",
     "@emotion/styled": "^11.13.0",
+    "@modelfusion/vercel-ai": "^1.1.0",
     "@mui/icons-material": "^5.16.5",
     "@mui/material": "^5.16.5",
     "@react-oauth/google": "^0.12.1",
     "@types/bcryptjs": "^2.4.6",
     "@types/express": "^4.17.21",
+    "ai": "^3.3.42",
     "argon2": "^0.40.3",
+    "async_hooks": "^1.0.0",
     "axios": "^1.7.2",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
@@ -32,6 +35,7 @@
     "hamburger-react": "^2.5.1",
     "ldrs": "^1.0.2",
     "lenis": "^1.1.13",
+    "modelfusion": "^0.137.0",
     "mysql2": "^3.11.0",
     "next": "^14.2.5",
     "next-cloudinary": "^6.9.0",
