--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "firebase": "^10.12.4",
+    "firebase-functions": "^6.0.1",
     "firebase-tools": "^13.17.0",
     "framer-motion": "^11.3.21",
     "hamburger-react": "^2.5.1",
