--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "react-fast-marquee": "^1.6.5",
     "react-icons": "^5.2.1",
     "react-infinite-scroll-component": "^6.1.0",
+    "react-intersection-observer": "^9.13.1",
     "react-responsive": "^10.0.0",
     "react-select": "^5.8.0",
     "react-virtualized-auto-sizer": "^1.0.24",
