--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "react-virtualized-auto-sizer": "^1.0.24",
     "react-window": "^1.8.10",
     "router": "^2.0.0",
+    "sharp": "^0.33.5",
     "superstatic": "^9.0.3",
     "tailwind-merge": "^2.5.2",
     "tailwind-scrollbar-hide": "^1.1.7"
