--- a/package.json
+++ b/package.json
@@ -16,6 +16,15 @@
     "@modelfusion/vercel-ai": "^1.1.0",
     "@mui/icons-material": "^5.16.5",
     "@mui/material": "^5.16.5",
+    "@radix-ui/react-accordion": "^1.2.1",
+    "@radix-ui/react-alert-dialog": "^1.1.2",
+    "@radix-ui/react-context-menu": "^2.2.2",
+    "@radix-ui/react-dialog": "^1.1.2",
+    "@radix-ui/react-dropdown-menu": "^2.1.2",
+    "@radix-ui/react-icons": "^1.3.1",
+    "@radix-ui/react-popover": "^1.1.2",
+    "@radix-ui/react-slider": "^1.2.1",
+    "@radix-ui/react-slot": "^1.1.0",
     "@react-oauth/google": "^0.12.1",
     "@types/bcryptjs": "^2.4.6",
     "@types/express": "^4.17.21",
@@ -26,9 +35,12 @@
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "cheerio": "^1.0.0-rc.12",
+    "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "cmdk": "^1.0.0",
     "cors": "^2.8.5",
     "csv-writer": "^1.6.0",
+    "date-fns": "^3.6.0",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "firebase": "^10.12.4",
@@ -38,6 +50,7 @@
     "hamburger-react": "^2.5.1",
     "ldrs": "^1.0.2",
     "lenis": "^1.1.13",
+    "lucide-react": "^0.454.0",
     "modelfusion": "^0.137.0",
     "mysql2": "^3.11.0",
     "next": "^14.2.5",
@@ -48,6 +61,7 @@
     "prettier": "^3.3.3",
     "punycode": "^2.3.1",
     "react": "^18",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^18",
     "react-fast-marquee": "^1.6.5",
     "react-icons": "^5.2.1",
@@ -60,8 +74,9 @@
     "router": "^2.0.0",
     "sharp": "^0.33.5",
     "superstatic": "^9.0.3",
-    "tailwind-merge": "^2.5.2",
-    "tailwind-scrollbar-hide": "^1.1.7"
+    "tailwind-merge": "^2.5.4",
+    "tailwind-scrollbar-hide": "^1.1.7",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@fullhuman/postcss-purgecss": "^6.0.0",
