--- a/package.json
+++ b/package.json
@@ -93,6 +93,7 @@
     "postcss": "^8.4.41",
     "tailwindcss": "^3.4.6",
     "ts-node": "^10.9.2",
-    "typescript": "^5.5.4"
+    "typescript": "^5.5.4",
+    "ws": ">=8.17.1"
   }
 }
