--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "@radix-ui/react-slider": "^1.2.1",
     "@radix-ui/react-slot": "^1.1.0",
     "@react-oauth/google": "^0.12.1",
+    "@react-three/drei": "^9.117.3",
+    "@react-three/fiber": "^8.17.10",
     "@types/bcryptjs": "^2.4.6",
     "@types/express": "^4.17.21",
     "ai": "^3.3.42",
@@ -75,7 +77,9 @@
     "superstatic": "^9.0.3",
     "tailwind-merge": "^2.5.4",
     "tailwind-scrollbar-hide": "^1.1.7",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "three": "^0.170.0",
+    "three-globe": "^2.35.2"
   },
   "devDependencies": {
     "@fullhuman/postcss-purgecss": "^6.0.0",
