--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
   "dependencies": {
     "@emotion/react": "^11.13.0",
     "@emotion/styled": "^11.13.0",
-    "@modelfusion/vercel-ai": "^1.1.0",
     "@mui/icons-material": "^5.16.5",
     "@mui/material": "^5.16.5",
     "@react-oauth/google": "^0.12.1",
+    "@react-three/cannon": "^6.6.0",
     "@react-three/drei": "^9.117.3",
     "@react-three/fiber": "^8.17.10",
     "@types/bcryptjs": "^2.4.6",
@@ -59,6 +59,7 @@
     "react-infinite-scroll-component": "^6.1.0",
     "react-responsive": "^10.0.0",
     "react-select": "^5.8.0",
+    "react-spring": "^9.7.4",
     "react-virtualized-auto-sizer": "^1.0.24",
     "react-window": "^1.8.10",
     "router": "^2.0.0",
@@ -68,7 +69,8 @@
     "tailwind-scrollbar-hide": "^1.1.7",
     "tailwindcss-animate": "^1.0.7",
     "three": "^0.170.0",
-    "three-globe": "^2.35.2"
+    "three-globe": "^2.35.2",
+    "use-cannon": "^0.5.3"
   },
   "devDependencies": {
     "@fullhuman/postcss-purgecss": "^6.0.0",
