--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
   },
   "devDependencies": {
     "@fullhuman/postcss-purgecss": "^6.0.0",
+    "@tailwindcss/postcss": "^4.0.0-beta.4",
     "@types/aos": "^3.0.7",
     "@types/cheerio": "^0.22.35",
     "@types/node": "^20.14.12",
@@ -86,7 +87,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
     "postcss": "^8.4.41",
-    "tailwindcss": "^3.4.6",
+    "tailwindcss": "^4.0.0-beta.4",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.4",
     "ws": ">=8.17.1"
